Fix image padding and fix spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,7 @@ body {
 
 .button {
   display: inline-block;
-  padding: 20px 30px;
+  padding: 15px 30px;
   cursor: pointer;
 }
 
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-  font-size: 65px;
+  font-size: 55px;
 }
 
 h2 {
